<resources>
    <string name="app_name">SimpleCalc</string>
    <string name="increase_button">+1</string>
    <string name="decrease_button">-1</string>
    <string name="clear_button">0</string>
    <string name="developer_name">Никита Новгородцев</string>
    <string name="pr_description">Простой калькулятор Версия 1.0</string>
    <string name="info_button">info</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multi">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_equal">=</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_clear">c</string>
    <string name="btn_plus">+</string>
    <string name="btn_divide">/</string>

</resources>