<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_formula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="formula" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/tv_formula"
        android:text="@string/btn_0" />
    <GridLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_clear"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_plus"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/divide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_divide"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/seven"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_7"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/eight"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_8"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/nine"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_9"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_multi"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/four"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_4"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/five"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_5"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/six"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_6"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mines"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_minus"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_1"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_2"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/three"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_3"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowWeight="2"
            android:layout_rowSpan="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_equal"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/zero"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_0"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_dot"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>